# teamly.py

./: .gitignore  404.html  README.md  pyproject.toml  pyrightconfig.json
about/release-notes/: index.html
docs/: index.md  mkdocs.yml
docs/docs/: index.md
docs/docs/getting-started/: introduction.md  quickstart.md
docs/guide/: create-your-teamly-bot.md
docs/site/: index.html
event-schemas/Channel/: CHANNEL_CREATED  CHANNEL_DELETED  CHANNEL_UPDATED
event-schemas/Channel/Announcement/: ANNOUNCEMENT_CHANNEL_CREATED  ANNOUNCEMENT_CHANNEL_UPDATED
event-schemas/Channel/Text/: TEXT_CHANNEL_CREATED  TEXT_CHANNEL_UPDATED
event-schemas/Channel/Voice/: VOICE_CHANNEL_CREATED  VOICE_CHANNEL_UPDATED
event-schemas/Channel/WatchStream/: WATCHSTREAM_CHANNEL_CREATED  WATCHSTREAM_CHANNEL_UPDATED
getting-started/quickstart/: index.html
search/: search_index.json
site/: index.html
site/getting-started/introduction/: index.html
teamly/: __init__.py  abc.py  announcement.py  application.py  attachment.py  blog.py  cache.py  category.py  channel.py  client.py  color.py  embed.py  embeds.py  emoji.py  enums.py  flags.py  gateway.py  http.py  logging.py  member.py  mention.py  message.py  permissions.py  reaction.py  role.py  state.py  team.py  todo.py  user.py  utils.py  webhook.py
teamly/schemas/: message.py  user.py
teamly/types/: announcement.py  application.py  attachment.py  blog.py  category.py  channel.py  embed.py  emoji.py  member.py  mention.py  message.py  reaction.py  role.py  team.py  todo.py  user.py  webhook.py
tests/: channel_t.py  todo_t.py
(+2 files in other folders)
