[project]
name = "teamly.py"
version = "0.1.0a"
description = "Teamly API wrapper for bots and automation"
authors = [
    {name = "MrFatihLD"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/MrFatihLD/teamly.py.git"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
